# ESP32C6_WASM

./: .gitignore  README.md
ESP32C6_WAMR/: sdkconfig  sdkconfig.defaults.esp32c61  sdkconfig.old
ESP32C6_WAMR/main/: grayscale_rust.h  idf_component.yml  main.c  wasm_grayscale_c.h  wasm_helloworld_c.h  wasm_helloworld_rust.h
app_grayscale_C/: 1_build_wasm.sh  2_copy_to_esp32c6_wamr.sh  grayscale.wasm  grayscale_c.h  grayscale_normal.h  grayscale_normal.wasm  iwasm
app_grayscale_C/src/: grayscale.c
app_grayscale_Rust/: 1_build_wasm_cargo.sh  1_build_wasm_rustc.sh  Cargo.toml  grayscale.wasm  grayscale_rust.h
app_grayscale_Rust/grayscale/: 1_build_wasm.sh  Cargo.toml
app_helloworld_Rust/: 1_build_wasm.sh  1_build_wasm_cargo.sh  1_build_wasm_rustc.sh  2_copy_to_esp32c6_wamr.sh  Cargo.toml  grayscale.wasm
app_helloworld_Rust/grayscale/: 1_build_wasm.sh  2_copy_to_esp32c6_wamr.sh  Cargo.toml
app_helloworld_Rust/grayscale/src/: main.rs
tools/binarydump-tool/: build.sh
